[package]
name = "keeper"
version = "0.1.0"
authors = ["Willem <willem66745@gmail.com>"]

[dependencies]
toml = "*"
time = "*"
log = "*"
log4rs = "*"
iron = "*"
#staticfile = "*"

# FIXME: change to crates.io version when possible
[dependencies.staticfile]
git = "https://github.com/iron/staticfile"

[dependencies.plugwise]
git = "https://github.com/willem66745/plugwise-rust"

[dependencies.daylight]
git = "https://github.com/willem66745/daylight-rust"

[dependencies.dailyschedule]
git = "https://github.com/willem66745/dailyschedule-rust"

[dependencies.ntpclient]
git = "https://github.com/willem66745/ntpclient-rust"

[dependencies.zoneinfo]
git = "https://github.com/willem66745/zoneinfo-rust"
