[package]
name = "keeper"
version = "0.1.0"
authors = ["Willem <willem66745@gmail.com>"]

[dependencies]
toml = "0.1"
time = "0.1"
log = "0.3"
iron = "0.3"
router = "0.1"
rustc-serialize = "0.3"
mount = "0.1"
staticfile = "0.2"

[dependencies.log4rs]
version = "0.4"
features = ["toml"]

[dependencies.plugwise]
git = "https://github.com/willem66745/plugwise-rust"

[dependencies.daylight]
git = "https://github.com/willem66745/daylight-rust"

[dependencies.dailyschedule]
git = "https://github.com/willem66745/dailyschedule-rust"

[dependencies.ntpclient]
git = "https://github.com/willem66745/ntpclient-rust"

[dependencies.zoneinfo]
git = "https://github.com/willem66745/zoneinfo-rust"
